--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,25 +89,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
-
     //Hilt
     def hilt_version = "2.44"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-
-//    object DaggerHilt {
-//        const val DAGGER_HILT = "com.google.dagger:hilt-android:2.38.1"
-//        const val DAGGER_HILT_COMPILER = "com.google.dagger:hilt-android-compiler:2.38.1"
-//        const val DAGGER_HILT_VIEW_MODEL = "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-//        const val DAGGER_HILT_ANDROIDX_COMPILER = "androidx.hilt:hilt-compiler:1.0.0"
-//    }
-//
-//    implementation (DaggerHilt.DAGGER_HILT)
-//    kapt (DaggerHilt.DAGGER_HILT_COMPILER)
-//    implementation (DaggerHilt.DAGGER_HILT_VIEW_MODEL)
-//    kapt (DaggerHilt.DAGGER_HILT_ANDROIDX_COMPILER)
 
     //CircleImage
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -172,4 +159,6 @@ dependencies {
     implementation('io.socket:socket.io-client:2.0.0') {
         exclude group: 'org.json', module: 'json'
     }
+
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 }
